--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ datafusion = { git = "https://github.com/apache/arrow-datafusion", rev = "5238e8
 datafusion-proto = { git = "https://github.com/apache/arrow-datafusion", rev = "5238e8c97f998b4d2cb9fab85fb182f325a1a7fb" }
 datafusion-python = { git = "https://github.com/apache/arrow-datafusion-python", rev = "0a6743c2a7f27015890c5546efda2d4e85d45a97" }
 futures = "0.3"
+glob = "0.3"
+log = "0.4"
 prost = "0.11"
 prost-types = "0.11"
 pyo3 = { version = "~0.17.3", features = ["extension-module", "abi3", "abi3-py37"] }
