--- a/requirements-in.txt
+++ b/requirements-in.txt
@@ -1,10 +1,11 @@
 black
 flake8
 isort
-maturin
+maturin[patchelf]
 mypy
 numpy
 pyarrow
 pytest
+ray
 toml
 importlib_metadata; python_version < "3.8"
