--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,15 +12,15 @@ rust-version = "1.62"
 build = "build.rs"
 
 [dependencies]
-datafusion = { version = "28.0.0", features = ["pyarrow", "avro"] }
-datafusion-proto = "28.0.0"
-datafusion-python = "28.0.0"
+datafusion = { version = "33.0.0", features = ["pyarrow", "avro"] }
+datafusion-proto = "33.0.0"
+datafusion-python = "33.0.0"
 futures = "0.3"
 glob = "0.3"
 log = "0.4"
-prost = "0.11"
-prost-types = "0.11"
-pyo3 = { version = "0.19", features = ["extension-module", "abi3", "abi3-py37"] }
+prost = "0.12"
+prost-types = "0.12"
+pyo3 = { version = "0.20", features = ["extension-module", "abi3", "abi3-py37"] }
 tokio = { version = "1.24", features = ["macros", "rt", "rt-multi-thread", "sync"] }
 uuid = "1.2"
 
@@ -35,6 +35,6 @@ crate-type = ["cdylib", "rlib"]
 [package.metadata.maturin]
 name = "raysql._raysql_internal"
 
-[profile.release]
-codegen-units = 1
-lto = true
+#[profile.release]
+#codegen-units = 1
+#lto = true
