--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -24,6 +24,7 @@ jobs:
         export PROTO_ZIP="protoc-21.4-linux-x86_64.zip"
         curl -LO https://github.com/protocolbuffers/protobuf/releases/download/v21.4/$PROTO_ZIP
         unzip $PROTO_ZIP
+        chmod +x $HOME/d/protoc/bin/protoc
         export PROTOC=$HOME/d/protoc/bin
         export PATH=$PATH:$PROTOC
         protoc --version
